 NEWS/ChangeLog for rJava
--------------------------

0.5-0	(under development)
   **	The order of arguments of .jfield has been changed to match
	the order used in .jcall and the return value is as expected
	and doesn't need .jsimplify anymore.

    o	The implementation of .jfield no longer uses reflection
	it supports static fileds and .field<-() was added.

    o	Consolidate interface code for static/non-static calls

    o	Add preliminary JRI support from R (see .jengine)

    o	Prepare hooks for de-serialization

    o	Add support for short Java type

    o	Add support for convertors

    o	Fix R-devel compatibility issues

    o	Fix a memory leak in string array handling

    o	Use Java settings from R for compilation

    o	Add a custom class loader

    o	Fix a bug in .jcastToArray that produced invalid signatures

    o	Added support for [Z in .jevalArray

    o	Fix a bug in .jarray missing [ prefix for native type arrays

0.4 branch has been branched off the trunk, see 0.4-branch for NEWS

0.4-13	2007-01-14
    o	Fix Java-side memory leaks (temporary parameters to methods
	were not propery released, thanks to Erik van Barneveld for
	supplying a reproducible example).

    o	Fix a bug that caused only the first VM parameter to be passed
	on during initialization (thanks to Bernard Rosman for
	reporting).

    o	.jmkref now accepts plain class names (with .)

    o	Fix bug in .jarray (and underlying RcreateArray) that was
	returning wrong class name if the contents class was an array.

    o	Add --enable-callbacks option to configure (disabled by
	default). The callbacks support is currently incomplete and
	experimental.

    o	Update URL to http://www.rforge.net/rJava/

    o	Update to JRI 0.3-7 (LCons, createRJavaRef, assign XT_NONE) 

0.4-12	2006-11-29
    o	Added documentation for .jthrow, .jclear and .jgetEx and
	a bugfix in .jgetEx

    o	rJava now uses a namespace. This is still somewhat experimental,